css changes and wrote function for staging and confirmRelease

--- a/style/css2/pignose.calendar.css
+++ b/style/css2/pignose.calendar.css
@@ -90,7 +90,8 @@
 }
 .pignose-calendar {
   width: 80%;
-  max-width: 360px;
+  max-width: 680px;
+  min-width: 300px;
   background-color: #ffffff;
   border: 1px solid #d8d8d8;
   font-size: 100%;
