--- a/style/css1/style.css
+++ b/style/css1/style.css
@@ -84,11 +84,11 @@ pre, code, code span {
 }
 
 .user {
-	background-color: #F7493B;
+	/* background-color: #F7493B; */
 }
 
 .release {
-	background-color: #4FC4CF;
+	/* background-color: #4FC4CF; */
 }
 
 button {
