--- a/style/css1/style2.css
+++ b/style/css1/style2.css
@@ -6,15 +6,22 @@
 	box-sizing: border-box;
 }
 body {
-	background: #49c4d0;
-	font-family: 'open sans', sans-serif;
+	background: #f9f9f9;
+	font-family: 'Montserrat', sans-serif;
+	text-align: center;
 }
 
 #app-header {
-	padding-top: 200px;
+	padding-top: 10px;
 	text-align: center;
-	color: #ffffff;
+	color: black;
+	font-size: 3.3em;
+}
 
+img {
+	margin-top: 2em;
+	max-width: 200px;
+	max-height: 200px;
 }
 
 .forms {
@@ -68,7 +75,7 @@ body {
 .forms .tab-group .active a {
 	background: #fff;
 	color: #444;
-	border-top: 3px solid #73cf41;
+	border-top: 3px solid #4FC4CF;
 }
 .forms input {
 	font-size: 16px;
@@ -104,7 +111,7 @@ body {
 	font-weight: 300;
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	background: #73cf41;
+	background: #4FC4CF;
 	color: #ffffff;
 	cursor: pointer;
 	-moz-transition: all 0.4s ease-in-out;
@@ -112,7 +119,7 @@ body {
 	-webkit-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 }
-.forms .button:hover, .button:focus { background: #56ae26; }
+.forms .button:hover, .button:focus { opacity: .7; }
 .text-p { text-align: right; }
 .text-p a { color: #1383ea; }
 
