--- a/style/css2/pignose.calendar.css
+++ b/style/css2/pignose.calendar.css
@@ -89,8 +89,8 @@
   opacity: .7;
 }
 .pignose-calendar {
-  width: 80%;
-  max-width: 680px;
+  width: 500px;
+  /* max-width: 680px; */
   min-width: 300px;
   background-color: #ffffff;
   border: 1px solid #d8d8d8;
@@ -391,4 +391,25 @@
 }
 .pignose-calendar.pignose-calendar-blue .pignose-calendar-body .pignose-calendar-row .pignose-calendar-unit.pignose-calendar-unit-range.pignose-calendar-unit-disabled a {
   background-color: #efefef;
+}
+
+@media screen and (max-width: 2000px) {
+	.pignose-calendar {
+		width: 600px;
+		/* margin-right: 1em; */
+	}
+}
+
+@media screen and (max-width: 1169px) {
+	.pignose-calendar {
+		width: 540px;
+		/* margin-right: 1em; */
+	}
+}
+
+@media screen and (max-width: 1100px) {
+	.pignose-calendar {
+		width: 80%
+		/* margin-right: 1em; */
+	}
 }
