--- a/style/css1/style.css
+++ b/style/css1/style.css
@@ -5,7 +5,7 @@
 html, body {
 	position: relative;
 	height: 100%;
-	font-size: 16px;
+	font-size: 14px;
 	background-color: #f9f9f9;
 	font-family: 'Montserrat', sans-serif;
 }
@@ -118,7 +118,8 @@ button {
 	margin: 1em;
 	margin-top: 1.4em;
 	padding: .6em 1em .6em 1em;
-	/* background-color: transparent; */
+	/* background-color: #FAFAFA; */
+	/* border-radius: 15px 50px; */
 }
 
 #logout {
